# Training_Inventyv

./: .gitignore  LICENSE  README.md
Rust Training/grpc_server/: Cargo.toml  build.rs
Rust Training/grpc_server/proto/: employee.proto  student.proto  user.proto
Rust Training/grpc_server/src/: main.rs
Rust Training/grpc_server/src/employees/: mod.rs  models.rs  services.rs
Rust Training/grpc_server/src/json_data/: Employee_data.json  Master_data.json  Student_data.json
Rust Training/grpc_server/src/students/: mod.rs  models.rs  services.rs
Rust Training/grpc_server/src/users/: mod.rs  models.rs  services.rs
Rust Training/rust_modules/: Cargo.toml
Rust Training/rust_modules/src/: main.rs
Rust Training/rust_modules/src/basic_crud_api/: mod.rs
Rust Training/rust_modules/src/basic_crud_api/employee/: mod.rs  (+1 more)
Rust Training/rust_modules/src/common_modules/: mod.rs
Rust Training/rust_modules/src/config/: mod.rs
Rust Training/rust_modules/src/employee/: mod.rs
Rust Training/rust_modules/src/hashmap/: employee.rs  mod.rs  student.rs
Rust Training/rust_modules/src/json_data/: Employee_data.json  Student_data_modified.json  employee_map1.json  employee_map2.json  employee_map3.json  employee_type3.json  student_Hashmap.json  tableOutput.json
Rust Training/rust_modules/src/lazy_static/: index.html  mod.rs
Rust Training/rust_modules/src/resources/: config-dev.json  config-prod.json  config-test.json  config.json
Rust Training/rust_modules/src/string_task/: mod.rs  task_1.rs  task_2.rs
Rust Training/rust_modules/src/student/: mod.rs
Rust Training/rust_modules/src/thread_task/: mod.rs
Rust Training/rust_modules/src/tikv_demo/: mod.rs
Rust Training/rust_modules/src/utils/: mod.rs
Rust Training/support_handler/: .gitignore  Cargo.toml
Rust Training/support_handler/src/: main.rs  temp_output.json
Rust Training/support_handler/src/common_modules/: mod.rs
Rust Training/support_handler/src/delete_requests/: mod.rs
Rust Training/support_handler/src/monitoring_service/: mod.rs
Rust Training/support_handler/src/request_generator/: mod.rs
Rust Training/support_handler/src/request_matcher/: mod.rs
Rust Training/support_handler/src/request_segregator/: mod.rs
Rust Training/support_handler/src/request_seperator/: mod.rs
Rust Training/support_handler/src/skills_updater/: mod.rs
Rust Training/support_handler/src/status_updater/: mod.rs
Rust Training/wasm_bindgen/: Cargo.toml  Table_data.json  main.js  package-lock.json
Rust Training/wasm_bindgen/src/: lib.rs
(+55 files in other folders)
