[package]
name = "rust_modules"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
config = "0.14.0"
lazy_static = "1.4.0"
serde_json = "1.0.111"
chrono = {version = "0.4", features = ["serde"] }
serde = {version="1.0.195", features=["derive"]}

hyper = "0.14.28"
tokio = { version = "1.0", features = ["full"] }
tower = { version = "0.4.13", features = ["full"]}
axum = { version = "0.6.4", features = ["multipart"] }
tower-http = { version = "0.3.0", features = ["cors", "trace"] }