[package]
name = "support_handler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
chrono = {version = "0.4", features = ["serde"] }
lazy_static = "1.4.0"
serde_json = "1.0.111"
serde = {version="1.0.195", features=["derive"]}