[package]
name = "wasm_bindgen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]


[dependencies]
wasm-bindgen = "0.2.91"
lazy_static = "1.4.0"
serde_json = "1.0.111"
serde = {version="1.0.195", features=["derive"]}